--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.bundle
+Gemfile.lock
 log/*
 db/*.sqlite3
 db/*.sqlite3.orig
@@ -6,3 +8,4 @@ tmp/*
 doc/api
 doc/app
 config/development.sphinx.conf
+config/database.yml
