--- a/config/database.yml
+++ b/config/database.yml
@@ -1,35 +1,16 @@
-development:
-  adapter: mysql
-  encoding: utf8
-  reconnect: false
-  database: registry_development
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+development: &DEVELOPMENT
+  adapter: sqlite3
+  database: db/development.sqlite3
 
 # Warning: The database defined as 'test' will be erased and
 # re-generated from your development database when you run 'rake'.
 # Do not set this db to the same as development or production.
 test: &TEST
-  adapter: mysql
-  encoding: utf8
-  reconnect: false
-  database: registry_test
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+  adapter: sqlite3
+  database: db/test.sqlite3
 
 production:
-  adapter: mysql
-  encoding: utf8
-  reconnect: false
-  database: registry_production
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+  <<: *DEVELOPMENT
 
 cucumber:
   <<: *TEST
